working on the side bar (being realisitc)

--- a/stylingPage.css
+++ b/stylingPage.css
@@ -1,11 +1,4 @@
-#homepage_p1{
-    text-align:center;
-}
-
-#homepage_p2{
-    text-align:center;
-}
-
-#homepage_p3{
-    text-align:center;
+.sidebar-Beaing_Realisitc{
+    position: absolute;
+    margin-left: 0px;
 }
