--- a/stylingPage.css
+++ b/stylingPage.css
@@ -1,3 +1,20 @@
 body{
     background-color: gainsboro;
 }
+
+/* Add a black background color to the top navigation */
+.top level_nav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .top level_nav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
