--- a/stylingPage.css
+++ b/stylingPage.css
@@ -1,4 +1,18 @@
 body{
     background-color: gainsboro;
+    font-family: Verdana, sans-serif;
 }
 
+.top_level_nav{
+    background-color: crimson;
+    overflow: hidden;
+}
+
+.top_level_nav a{
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 5px 12px;
+  text-decoration: none;
+  font-size: 17px;
+}
