--- a/stylingPage.css
+++ b/stylingPage.css
@@ -1,8 +1,3 @@
-body{
-    background-color: gainsboro;
-    font-family: Verdana, sans-serif;
-}
-
 .top_level_nav{
     background-color: darkolivegreen;
     overflow: hidden;
@@ -21,4 +16,26 @@ body{
     background-color: black;
     color: olive;
   }
+
+.sidebar {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 160px; /* Set the width of the sidebar */
+    position: absolute; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 0; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 10px;
+    background-color: slategray; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 0px;
+    margin-top:69px
+  }
+
+body {
+    background-color: gainsboro;
+    font-family: Verdana, sans-serif;
+}
+
+h1 {
+   text-align: center; 
+}
 
