changed margin left on sidebar

--- a/stylingPage.css
+++ b/stylingPage.css
@@ -18,13 +18,13 @@
   }
 
 .sidebar {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
+    height: 841%; /* Full-height: remove this if you want "auto" height */
+    width: 180px; /* Set the width of the sidebar */
     position: absolute; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 0; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 10px;
-    background-color: slategray; /* Black */
+    background-color: olivedrab; /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 0px;
     margin-top:69px
