--- a/stylingPage.css
+++ b/stylingPage.css
@@ -24,17 +24,19 @@
     z-index: 0; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 10px;
-    background-color: olivedrab; /* Black */
+    background-color: darkolivegreen; /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 0px;
     margin-top:69px
   }
 
   .sidebar_main {
-    margin-left: 160px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
+    position: absolute;
+    width: 150px;
+    margin-left: -200px;
+    z-index: 0;
   }
-  
+
 body {
     background-color: gainsboro;
     font-family: Verdana, sans-serif;
